--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /projects/ 
 
   - title: "CV"
-    url: /cv/  
+    url: /files/chanelfcheng_cv.pdf  
 
   # - title: "Teaching"
   #   url: /teaching/    
