Updated profile photo

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Chanel Cheng"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "BSc Student in Computer Science at RIT"
   location         : "Rochester, NY"
   employer         :
